# linjal

./: CMakeLists.txt
linjal/: CMakeLists.txt  camera.cpp  camera.hpp  color_cell_renderer.cpp  color_cell_renderer.hpp  color_palette_model.cpp  color_palette_model.hpp  color_palette_widget.cpp  color_palette_widget.hpp  color_palette_window.cpp  color_palette_window.hpp  drawing_area.cpp  drawing_area.hpp  drawing_context.cpp  drawing_context.hpp  json.cpp  json.hpp  main.cpp  main_window.cpp  main_window.hpp  math.cpp  math.hpp  model.cpp  model.hpp  pen_tool.cpp  pen_tool.hpp  point_ref.cpp  point_ref.hpp  select_tool.cpp  select_tool.hpp  shape.cpp  shape.hpp  tool.cpp  tool.hpp  utils.cpp  utils.hpp  view_transform.cpp  view_transform.hpp
math/include/math/: math.hpp  vector.hpp
